// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePickerBody should be rendered correctly 1`] = `
<div
  className="uui-timepicker-container root"
>
  <div
    className="uui-timepicker-item"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-input-box uui-timepicker-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <input
        className="uui-input"
        inputMode="numeric"
        max={12}
        min={0}
        onChange={[Function]}
        placeholder="0"
        step={1}
        type="number"
        value="12"
      />
      <div
        className="uui-numeric-input-button-group"
      >
        <div
          className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
          onClick={[Function]}
          style={Object {}}
        />
        <div
          className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
  <div
    className="uui-timepicker-item"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-input-box uui-timepicker-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <input
        className="uui-input"
        inputMode="numeric"
        max={59}
        min={0}
        onChange={[Function]}
        placeholder="0"
        step={1}
        type="number"
        value="30"
      />
      <div
        className="uui-numeric-input-button-group"
      >
        <div
          className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
          onClick={[Function]}
          style={Object {}}
        />
        <div
          className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
  <div
    className="uui-timepicker-item"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-input-box uui-readonly uui-timepicker-input"
      onBlur={[Function]}
      onFocus={[Function]}
      tabIndex={-1}
    >
      <input
        aria-readonly={true}
        className="uui-input"
        onChange={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        type="text"
        value="PM"
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`TimePickerBody should be rendered correctly 2`] = `
<div
  className="uui-timepicker-container root"
>
  <div
    className="uui-timepicker-item"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-input-box uui-timepicker-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <input
        className="uui-input"
        inputMode="numeric"
        max={12}
        min={1}
        onChange={[Function]}
        placeholder="0"
        step={1}
        type="number"
        value="12"
      />
      <div
        className="uui-numeric-input-button-group"
      >
        <div
          className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
          onClick={[Function]}
          style={Object {}}
        />
        <div
          className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
  <div
    className="uui-timepicker-item"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-input-box uui-timepicker-input"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      tabIndex={-1}
    >
      <input
        className="uui-input"
        inputMode="numeric"
        max={59}
        min={0}
        onChange={[Function]}
        placeholder="0"
        step={1}
        type="number"
        value="30"
      />
      <div
        className="uui-numeric-input-button-group"
      >
        <div
          className="container uui-icon uui-enabled -clickable uui-numeric-input-up-button"
          onClick={[Function]}
          style={Object {}}
        />
        <div
          className="container uui-icon uui-enabled -clickable uui-numeric-input-down-button"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
  <div
    className="uui-timepicker-item"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-up"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-input-box uui-readonly uui-timepicker-input"
      onBlur={[Function]}
      onFocus={[Function]}
      tabIndex={-1}
    >
      <input
        aria-readonly={true}
        className="uui-input"
        onChange={[Function]}
        onKeyDown={[Function]}
        readOnly={true}
        type="text"
        value="PM"
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-timepicker-icon-down"
      onClick={[Function]}
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
</div>
`;
